# verilog_parser_gui

./: CMakeLists.txt  LICENSE  VisualizerWindow.cpp  flow.tcl  git_cmd.sh  license.txt  x.sh
src/: 0CMakeLists.txt  CMakeLists.txt  main.cpp
src/gui/: 0_crashed_MainWindow.cpp  CommandLineEdit.h  MainWindow.cpp  MainWindow.h  VisualizerWindow.cpp  VisualizerWindow.h
src/gui/old_tmp/: MainWindow.cpp  MainWindow.h
src/lic/: LicenseChecker.cpp  LicenseChecker.h
src/old_tmp/0_gui/: MainWindow.cpp  MainWindow.h
src/verilog_parser/: VerilogParser.cpp  VerilogParser.h
